Fixed nav bar and content scrolling overlap

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -56,13 +56,14 @@ body {
     position: fixed;
     z-index: 99;
     width: 100%;
+    top: 0;
     margin: 0 0 30px;
     overflow: auto;
     color: #ffffff;
     background: #ffffff;
     border-bottom: 2px solid #cccccc;
   }
-  
+
   #logo {
     float: left;
     width: 250px;
@@ -233,7 +234,7 @@ body {
     #logo{
         margin-left: 50px;
     }
-}
+    }
     
   @media screen and (min-width: 641px) and (max-width: 768px){
     .main-section{
